--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "npm": "^6.1.0",
     "nuxt": "^1.0.0",
     "request": "^2.87.0",
+    "username": "^3.0.0",
     "vuetify": "^0.17.3"
   },
   "devDependencies": {
