--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@nuxtjs/axios": "^5.0.0",
     "babel-polyfill": "^6.26.0",
     "express": "^4.15.3",
+    "express-ntlm": "^2.3.0",
     "g": "^2.0.1",
     "gsap": "^2.0.1",
-    "node-sspi": "^0.2.2",
     "npm": "^6.1.0",
     "nuxt": "^1.4.1",
     "request": "^2.87.0",
