--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express",
+  "name": " SelfService",
   "version": "1.0.0",
   "description": "SI helpdesk selfService",
   "author": "C Hector",
